[master]
    - Fix for bug #1276: OO styles do not consider editor fields anymore for sorting
    - Fix for bug #1288: Emacs keybindings: Rebinding of C-f can now be configured
    - Antialiasing is now enabled and set to LCD
2.11 beta 3
    - New MacOSX integration
    - Two releases for MacOSX: OSX-Java6 for Apple Java 1.6 and OSX for Oracle Java 1.7+
    - Fix for bug #1278 Crash after changing LookAndFeel (showing a proper error message if L&F is not available)
    - Adds some predefined look and feels in preference window (lists only available L&Fs)
    - Fixes #1131: MacOSX: JabRef minimizes when clicking on x
    - Dropped jayatana version 1.2.4 as version 2.x superseeds it
    - Feature: Trim journal names before looking up the abbreviation
    - Minor fixes regarding the status output of marking/unmarking entries
    - Internal default key bindings are honored again
    - Default key bindings for "Find unlinked files" (shift F7), "Open folder" (ctrl shift O), and "Hide/show toolbar" (ctrl alt t)
    - Opening a file using the CLI works again. Just use the filename as parameter, without any command.
    - Emacs keybindings: CTRL+f is not rebound as CTRL+f is more often used for "search"
    - Performance Improvement: Saving of large databases is dramatically faster
    - When a syntax error in the BibTeX source panel is made, the error cause is now always output
    - Jars that are available in maven are now downloaded and used in both ant and gradle
    - Replaced option parsing library ritopt with apache commons-cli which is in maven repository
    - BREAKING passing an option file to the cli command no longer works due to change of internal cli library!
    - Fix for bug #1283: Month fields like {8,} no longer cause exceptions
    - Disabled ISBNtoBibTeX fetcher (see bug #1241)
2.11 beta 2
    - Feature: Option to clean URLs generated by Google (patch #204)
    - Fix for bug #1272: JabRef now launches on Mac OS X