@@ -31,14 +31,15 @@ public class Priority extends SpecialField {
 
     private Priority() {
         ArrayList<SpecialFieldValue> values = new ArrayList<SpecialFieldValue>();
-        values.add(new SpecialFieldValue(this, Globals.lang("null"), "clearPriority", Globals.lang("Clear priority"), null, Globals.lang("No priority information")));
+        values.add(new SpecialFieldValue(this, null, "clearPriority", Globals.lang("Clear priority"), null, Globals.lang("No priority information")));
         ImageIcon icon;
         icon = GUIGlobals.getImage("red");
-        values.add(new SpecialFieldValue(this, Globals.lang("prio1"), "setPriority1", Globals.lang("Set priority to high"), icon, Globals.lang("Priority high")));
+        // DO NOT TRANSLATE "prio1" etc. as this makes the .bib files non portable
+        values.add(new SpecialFieldValue(this, "prio1", "setPriority1", Globals.lang("Set priority to high"), icon, Globals.lang("Priority high")));
         icon = GUIGlobals.getImage("orange");
-        values.add(new SpecialFieldValue(this, Globals.lang("prio2"), "setPriority2", Globals.lang("Set priority to medium"), icon, Globals.lang("Priority medium")));
+        values.add(new SpecialFieldValue(this, "prio2", "setPriority2", Globals.lang("Set priority to medium"), icon, Globals.lang("Priority medium")));
         icon = GUIGlobals.getImage("green");
-        values.add(new SpecialFieldValue(this, Globals.lang("prio3"), "setPriority3", Globals.lang("Set priority to low"), icon, Globals.lang("Priority low")));
+        values.add(new SpecialFieldValue(this, "prio3", "setPriority3", Globals.lang("Set priority to low"), icon, Globals.lang("Priority low")));
         this.setValues(values);
         TEXT_DONE_PATTERN = "Set priority to '%0' for %1 entries";
     }
