@@ -29,6 +29,7 @@ public class Quality extends SpecialField {
 
     private Quality() {
         ArrayList<SpecialFieldValue> values = new ArrayList<SpecialFieldValue>();
+        // DO NOT TRANSLATE "qualityAssured" as this makes the produced .bib files non portable
         values.add(new SpecialFieldValue(this, "qualityAssured", "toggleQualityAssured", Globals.lang("Toogle quality assured"), GUIGlobals.getImage("qualityAssured"), Globals.lang("Toogle quality assured")));
         this.setValues(values);
         TEXT_DONE_PATTERN = "Toggled quality for %0 entries";
