@@ -31,12 +31,13 @@ public class ReadStatus extends SpecialField {
 
     private ReadStatus() {
         ArrayList<SpecialFieldValue> values = new ArrayList<SpecialFieldValue>();
-        values.add(new SpecialFieldValue(this, Globals.lang("null"), "clearReadStatus", Globals.lang("Clear read status"), null, Globals.lang("No read status information")));
+        values.add(new SpecialFieldValue(this, null, "clearReadStatus", Globals.lang("Clear read status"), null, Globals.lang("No read status information")));
         ImageIcon icon;
         icon = GUIGlobals.getImage("readStatusRead");
-        values.add(new SpecialFieldValue(this, Globals.lang("read"), "setReadStatusToRead", Globals.lang("Set read status to read"), icon, Globals.lang("Read status read")));
+        // DO NOT TRANSLATE "read" as this makes the produced .bib files non portable
+        values.add(new SpecialFieldValue(this, "read", "setReadStatusToRead", Globals.lang("Set read status to read"), icon, Globals.lang("Read status read")));
         icon = GUIGlobals.getImage("readStatusSkimmed");
-        values.add(new SpecialFieldValue(this, Globals.lang("skimmed"), "setReadStatusToSkimmed", Globals.lang("Set read status to skimmed"), icon, Globals.lang("Read status skimmed")));
+        values.add(new SpecialFieldValue(this, "skimmed", "setReadStatusToSkimmed", Globals.lang("Set read status to skimmed"), icon, Globals.lang("Read status skimmed")));
         this.setValues(values);
         TEXT_DONE_PATTERN = "Set read status to '%0' for %1 entries";
     }
