@@ -2451,22 +2451,11 @@ Table_row_height_padding=Zeilenabstand
 Toogle_print_status=Druckstatus_umschalten
 
 Set_rank_to_'%0'_for_%1_entries=Rang_f\u00fcr_%1_Eintr\u00e4ge_auf_'0%'_setzen
-rank1=1_Stern
-rank2=2_Sterne
-rank3=3_Sterne
-rank4=4_Sterne
-rank5=5_Sterne
-null=null
 Set_priority_to_'%0'_for_%1_entries=Priorit\u00e4t_f\u00fcr_%1_Eintr\u00e4ge_auf_'%0'_setzen
-prio1=hoch
-prio2=mittel
-prio3=niedrig
 Toggled_quality_for_%0_entries=Qualit\u00e4t_f\u00fcr_%0_Eintr\u00e4ge_umschalten
 Toggled_print_status_for_%0_entries=Druckstatus_f\u00fcr_%0_Eintr\u00e4ge_umschalten
 Toggled_relevance_for_%0_entries=Relevanz_f\u00fcr_%0_Eintr\u00e4ge_schalten
 Set_read_status_to_'%0'_for_%1_entries=Lesestatus_f\u00fcr_%1_Eintr\u00e4ge_auf_'%0'_setzen
-read=gelesen
-skimmed=\u00fcberflogen
 Marked_all_%0_selected_entries=Alle_%0_Eintr\u00e4ge_markiert
 
 Marked_selected_entry=Ausgew\u00e4hlten_Eintrag_markiert
