@@ -2439,22 +2439,11 @@ Table_row_height_padding=Table_row_height_padding
 Toogle_print_status=Toggle_print_status
 
 Set_rank_to_'%0'_for_%1_entries=Set_rank_to_'%0'_for_%1_entries
-rank1=one_star
-rank2=2_stars
-rank3=3_stars
-rank4=4_stars
-rank5=5_stars
-null=zero
 Set_priority_to_'%0'_for_%1_entries=Set_priority_to_'%0'_for_%1_entries
-prio1=high
-prio2=medium
-prio3=low
 Toggled_quality_for_%0_entries=Toggled_quality_for_%0_entries
 Toggled_print_status_for_%0_entries=Toggled_print_status_for_%0_entries
 Toggled_relevance_for_%0_entries=Toggled_relevance_for_%0_entries
 Set_read_status_to_'%0'_for_%1_entries=Set_read_status_'%0'_for_%1_entries
-read=read
-skimmed=skimmed
 
 Marked_selected_entry=Marked_selected_entry
 Marked_all_%0_selected_entries=Marked_all_%0_selected_entries
