@@ -1586,22 +1586,11 @@ Table_row_height_padding=Relleno_de_altura_de_fila
 Toogle_print_status=Cambiar_status_de_impresi\u00f3n
 
 Set_rank_to_'%0'_for_%1_entries=Establecer_rango_a_'%0'_para_%1_entradas
-rank1=rango1
-rank2=rango2
-rank3=rango3
-rank4=rango4
-rank5=rango5
-null=nulo
 Set_priority_to_'%0'_for_%1_entries=Establecer_prioridad_a_'%0'_para_%1_entradas
-prio1=prio1
-prio2=prio2
-prio3=prio3
 Toggled_quality_for_%0_entries=Cambiada_calidad_para_%0_entradas
 Toggled_print_status_for_%0_entries=Cambiado_estatus_de_impresion
 Toggled_relevance_for_%0_entries=Cambiada_relevancia_para_%0_entradas
 Set_read_status_to_'%0'_for_%1_entries=Establecer_estatus_de_lectura_a_'%0'_para_%1_entradas
-read=Le\u00eddo
-skimmed=Vistazo
 
 Marked_all_%0_selected_entries=Marcadas_todas_las_%0_entradas_seleccionadas
 Marked_selected_entry=Entrada_marcada_seleccionadas
