@@ -1633,22 +1633,11 @@ Table_row_height_padding=Espacement_en_hauteur_des_rangées_de_tableau
 Toogle_print_status=Changer_le_statut_d'impression
 
 Set_rank_to_'%0'_for_%1_entries=Rang_mis_à_'%0'_pour_%1_entrées
-rank1=une_étoile
-rank2=2_étoiles
-rank3=3_étoiles
-rank4=4_étoiles
-rank5=5_étoiles
-null=zéro
 Set_priority_to_'%0'_for_%1_entries=Priorité_mise_à_'%0'_pour_%1_entrées
-prio1=forte
-prio2=intermédiaire
-prio3=faible
 Toggled_quality_for_%0_entries=Vérification_de_qualité_modifiée_pour_%0_entrées
 Toggled_print_status_for_%0_entries=Statut_d'impression_modifié_pour_%0_entrées
 Toggled_relevance_for_%0_entries=Pertinence_modifiée_pour_%0_entrées
 Set_read_status_to_'%0'_for_%1_entries=Statut_de_lecture_mis_à_'%0'_pour_%1_entrées
-read=lu
-skimmed=parcouru
 
 Marked_all_%0_selected_entries=%0_entrées_sélectionnées_étiquetées
 Marked_selected_entry=Entrées_sélectionnées_étiquetées
