@@ -1717,22 +1717,11 @@ Table_row_height_padding=Altezza_delle_righe
 Toogle_print_status=Inverti_lo_stato_di_stampa
 
 Set_rank_to_'%0'_for_%1_entries=Valutazione_impostata_a_'%0'_per_'%1'_voce/i
-rank1=1_stella
-rank2=2_stelle
-rank3=3_stelle
-rank4=4_stelle
-rank5=5_stelle
-null=zero
 Set_priority_to_'%0'_for_%1_entries=Priorit\u00e0_impostata_a_'%0'_per_'%1'_voce/i
-prio1=alta
-prio2=media
-prio3=bassa
 Toggled_quality_for_%0_entries=Modificata_la_valutazione_di_qualit\u00e0_per_'%0'_voce/i
 Toggled_print_status_for_%0_entries=Invertito_lo_stato_di_stampa_per_'%0'_voce/i
 Toggled_relevance_for_%0_entries=Modificata_la_valutazione_di_rilevanza_per_'%0'_voce/i
 Set_read_status_to_'%0'_for_%1_entries=Stato_di_lettura_impostato_a_'%0'_per_'%1'_voce/i
-read=letto
-skimmed=scorso
 
 Marked_all_%0_selected_entries=Contrassegnate_tutte_le_'%0'_voci_selezionate
 Marked_selected_entry=Contrassegnate_le_voci_selezionate
