@@ -2902,22 +2902,11 @@ Table_row_height_padding=
 Toogle_print_status=
 
 Set_rank_to_'%0'_for_%1_entries=
-rank1=
-rank2=
-rank3=
-rank4=
-rank5=
-null=
 Set_priority_to_'%0'_for_%1_entries=
-prio1=
-prio2=
-prio3=
 Toggled_quality_for_%0_entries=
 Toggled_print_status_for_%0_entries=
 Toggled_relevance_for_%0_entries=
 Set_read_status_to_'%0'_for_%1_entries=
-read=
-skimmed=
 
 Marked_all_%0_selected_entries=
 Marked_selected_entry=
