@@ -1602,22 +1602,11 @@ Table_row_height_padding=Preenchimento_(padding)_da_altura_das_linhas_da_tabela
 Toogle_print_status=Alternar_status_da_impress\u00e3o
 
 Set_rank_to_'%0'_for_%1_entries=Definir_ranking_%0_para_%_registros
-rank1=1_estrela
-rank2=2_estrelas
-rank3=3_estrelas
-rank4=4_estrelas
-rank5=5_estrelas
-null=zero
 Set_priority_to_'%0'_for_%1_entries=Definir_prioridade_%0_para_%1_registros
-prio1=alta
-prio2=m\u00e9dia
-prio3=baixa
 Toggled_quality_for_%0_entries=Qualidade_de_%0_registros_foi_alternada
 Toggled_print_status_for_%0_entries=%0_registros_tiveram_seus_status_de_impress\u00e3o_de_alternados
 Toggled_relevance_for_%0_entries=%0_registros_tiveram_sua_relevância_alternada
 Set_read_status_to_'%0'_for_%1_entries=Definir_status_de_leitura_%0_para_%1_registros
-read=lido
-skimmed=folheado
 
 Marked_all_%0_selected_entries=Marcadas_todos_os_%0_registros
 Marked_selected_entry=Registro_selecionado_marcado
