@@ -1624,22 +1624,11 @@ Table_row_height_padding=Tablo_satır_yüksekliği_dolgusu
 Toogle_print_status=Yazdırma_statüsünü_değiştir
 
 Set_rank_to_'%0'_for_%1_entries=%1_girdiler_için_rütbeyi_'%0'a_ata
-rank1=rütbe1
-rank2=rütbe2
-rank3=rütbe3
-rank4=rütbe4
-rank5=rütbe5
-null=boş
 Set_priority_to_'%0'_for_%1_entries=%1_girdiler_için_önceliği_'%0'a_ata
-prio1=önce1
-prio2=önce2
-prio3=önce3
 Toggled_quality_for_%0_entries=%0_girdiler_için_kalite_değiştirildi
 Toggled_print_status_for_%0_entries=%0_girdiler_için_yazdırma_statüsü_değiştirildi
 Toggled_relevance_for_%0_entries=%0_girdiler_için_uygunluk_değiştirildi
 Set_read_status_to_'%0'_for_%1_entries=%1_girdiler_için_okunma_statüsü_'%0'_olarak_ayarlandı
-read=okundu
-skimmed=göz_gezdirildi
 
 Marked_all_%0_selected_entries=Tüm_%0_seçilmiş_girdi_işaretlendi
 Marked_selected_entry=Seçilmiş_girdi_işaretlendi
